replaced backbiting with backbite, fixed spacing for sm_simulator.

--- a/projects/hamiltonian_path/index.html
+++ b/projects/hamiltonian_path/index.html
@@ -110,7 +110,7 @@ changed.
 </p>
 <p>
 <b>About:</b> This javascript program generates a Hamiltonian path on an n &times; n grid
-using the backbiting move described in the paper &ldquo;Secondary structures
+using the backbite move described in the paper &ldquo;Secondary structures
 in long compact polymers&rdquo; by Richard Oberdorf, Allison Ferguson, Jesper
 L. Jacobsen and Jan&eacute; Kondev, Phys. Rev. E 74, 051801 (2006).
 Paper available via the <a
@@ -261,7 +261,7 @@ O(n<sup>2</sup>), and it is reasonable to suppose that in fact it is a relativel
 small power of n. A more sophisticated implementation would allow the
 backbite move to be performed in time O(log n).</li>
 <li>The Markov chain resulting from repeated application of the
-backbiting move has not (yet) been
+backbite move has not (yet) been
 proved to be ergodic. This is an interesting open problem. The Markov
 chain is ergodic
 for small grid sizes, and my intuition is that
@@ -276,7 +276,7 @@ different to small grids due to the existence of knots.
 </li>
 <li>
 Hamiltonian circuit generator just generates a path, and continues
-iterating the backbiting move until a circuit is generated. This method
+iterating the backbite move until a circuit is generated. This method
 <it>cannot</it> select a circuit uniformly at random because circuit
 selection probability is weighted by the (expected) space between
 samples. I think this can be best explained by an example: suppose we
