--- a/projects/saw_videos/index.html
+++ b/projects/saw_videos/index.html
@@ -66,11 +66,11 @@
     </div> <!-- topbar -->
     <div id="contentblock">
         <div id="content">
-                <h1 style="display:inline-block;line-height:1.0em;margin-bottom:-0.3em;">
+                <h1 style="display:inline-block;line-height:1.0em;margin-bottom:0.5em;">
                 <div style="display:block;float:left;margin-right:1.5em;vertical-align:top;">
                 <a href="/" ><img src="/img/nc_full_logo.png"></img></a></div>
                 <div style="display:block;float:left;clear:right;vertical-align:top;">
-                Videos and images of self-avoiding walks
+                Videos and images of SAW 
                 </div>
                 </h1>
         <!--<p>Statistical mechanics simulator due to <a href="http://lattice.complex.unimelb.edu.au/home/">Nathan Clisby</a>, 2013.</p>-->
