--- a/projects/backtracker/index.html
+++ b/projects/backtracker/index.html
@@ -89,8 +89,9 @@
             their own heuristics (intuition).
             </p>
             <p>
-            A prototype version can be played <a href="app/" target="_blank">here</a>
-            for now; it will likely move to a different url in future.
+            A prototype version can be played <a href="app/"
+                target="_blank">here</a>
+            for now (opens in a new window). It will likely move to a different url in future.
             </p>
             <p>
             This prototype works for the 
