Minor edits in backtracker.

--- a/projects/backtracker/index.html
+++ b/projects/backtracker/index.html
@@ -108,7 +108,7 @@
             <p>
             What's the largest board for which you can find an open
             knight's tour? (Hints: <a
-                href="http://en.wikipedia.org/wiki/Knight%27s_tour#Warnsdorff.27s_rule">Warnsdorf's
+                href="http://en.wikipedia.org/wiki/Knight%27s_tour#Warnsdorff.27s_rule">Warnsdorff's
                 rule</a> is an effective heuristic, and mind the corners
             of the board.)
             </p>
@@ -137,7 +137,9 @@
             <p>
             Your goal is to search for a solution to the combinatorial
             search problem, e.g. a valid matrix decomposition, or a
-            knight's tour, and a complete N queens configuration.
+            knight's tour, or a complete N queens configuration. These
+            solutions are represented in the backtracking tree by dark
+            green nodes.
             </p>
             <p>
             First you must access the left-most menu to choose which
