Minor edits in /research/.

--- a/research/index.html
+++ b/research/index.html
@@ -103,10 +103,21 @@
             idealised a model is, provided it is in the same
             &ldquo;universality class&rdquo; the model will have
             <em>exactly</em> the same fundamental properties as real,
-            physical systems. One example of universality, and in fact
+            physical systems.
+            </p>
+            <p>
+            One example of universality, and in fact
             the one I'm most familiar with, is the way self-avoiding
             walks exactly model certain aspects of polymers (long
-            molecules) in a solvent.
+            molecules) in a solvent. Self-avoiding walks are an
+            extremely simple model to define: just take a grid in two or
+            three dimensions, and start off at one of the sites.
+            Then walk to neighbouring sites for <it>N</it> steps, with the
+            the rule that you cannot return to a previously visited
+            site. It turns out that these self-avoiding walks exactly capture
+            important features of polymers in a good solvent, such as
+            the relationship between the size of a polymer (what size
+            ball it can fit inside) and the length of the polymer.
             </p>
             <p>
             For my PhD I worked with Barry McCoy at Stony Brook and made
@@ -132,8 +143,8 @@
             I'm interested in many other topics (it may be shorter to
             list things I find uninteresting!), but in particular I have
             research interests in developing efficient enumeration
-            algorithms, physical combinatorics, climate change (in
-            particular policy around methane and carbon dioxide,
+            algorithms, physical combinatorics, climate change
+            (especially policy around methane and carbon dioxide,
             so-called multi-gas modelling), modelling more broadly,
             polymer physics, and mathematical visualisation.
             </p>
