--- a/research/index.html
+++ b/research/index.html
@@ -112,7 +112,7 @@
             molecules) in a solvent. Self-avoiding walks are an
             extremely simple model to define: just take a grid in two or
             three dimensions, and start off at one of the sites.
-            Then walk to neighbouring sites for <it>N</it> steps, with the
+            Then walk to neighbouring sites for <i>N</i> steps, with the
             the rule that you cannot return to a previously visited
             site. It turns out that these self-avoiding walks exactly capture
             important features of polymers in a good solvent, such as
