--- a/research/publications/index.html
+++ b/research/publications/index.html
@@ -180,7 +180,8 @@
                                             thesis</a>, Stony Brook University
                                         (2004).</td></tr>
                                 <tr><td>Nathan Clisby and Barry M. McCoy, Analytic
-                                        calculation of <em>B<sub>4</sub></em> for hard
+                                        calculation of
+                                        <i>B<sub>4</sub></i> for hard
                                         spheres in even dimensions, <a
                                             href="http://www.arxiv.org/abs/cond-mat/0303098">cond&ndash;mat/0303098</a>,
                                         <a
@@ -200,7 +201,7 @@
                                         Anatoli S. Kheifets, Nathan Clisby,
                                         Ian E. McCarthy, and Eric Weigold,
                                         Measured energy&ndash;momentum densities of the
-                                        valence band of aluminium <a
+                                        valence band of aluminium, <a
                                             href="http://dx.doi.org/10.1088/0953-8984/9/9/008">J.
                                             Phys.: Condens. Matter</a>,
                                         <b>9</b>:1931&ndash;1950 (1997).</td></tr>
