Changed heading and added a few words for /projects/software/.

--- a/projects/software/index.html
+++ b/projects/software/index.html
@@ -67,11 +67,12 @@
                 <div style="display:block;float:left;margin-right:1.5em;vertical-align:top;">
                 <a href="/" ><img src="/img/nc_full_logo.png"></img></a></div>
                 <div style="display:block;float:left;clear:right;vertical-align:top;">
-                Software for sampling self-avoiding walks
+                Software for polymer simulation
                 </div>
                 </h1>
-        <p>Future home of an open source library for the rapid Monte Carlo
-simulation of polymers. The data structure and algorithms are described
+        <p>Future home of an open source software library for the rapid Monte Carlo
+simulation of polymers, in particular self-avoiding walks and related
+models. The data structure and algorithms are described
 in the following papers:
 N. Clisby, Efficient implementation of the pivot algorithm for
     self&#150;avoiding walks, <a
@@ -84,6 +85,10 @@ algorithm, <a
     href="http://www.arxiv.org/abs/1002.0494">arXiv:1002.0494</a>, <a
     href="http://dx.doi.org/10.1103/PhysRevLett.104.055702">Phys. Rev.
     Lett.</a> <b>104</b>, 055702 (2010).
+</p>
+<p>
+I have wanted to release this software for a number of years, but
+have not yet found the time and energy to do so. This will change soon!
 </p>
 <p>
 At the moment I have a working, efficient implementation of the
