--- a/research/publications/index.html
+++ b/research/publications/index.html
@@ -134,7 +134,7 @@
                                 (2009). </td></tr>
                         <tr><td> Nathan Clisby
                                 and Gordon Slade, Polygons and the lace expansion, in
-                                <em>Polygons, Polyominoes and Polycubes</em>, Lecture
+                                <em>Polygons, Polyominoes and Polycubes,</em> Lecture
                                 notes in Physics Vol. 775, Ed. A.&#160;J.&#160;Guttmann
                                 (Springer, 2009) pp. 117&ndash;142.</tr></td> 
                         <tr><td>Ian G. Enting, D.&#160;Karoly, J.&#160;Falk,
