Added additional snippets, some content in research.

--- a/research/topics/index.html
+++ b/research/topics/index.html
@@ -65,7 +65,65 @@
             <p>
             30/12/14: Empty for now, I will be progressively adding
             material here over the next few weeks.
+            <a href="#mcmc">
+                Efficient algorithms for Markov chain Monte
+                Carlo simulaton</a>,
+            <a href="#virial">
+                Virial series</a>,
+            <a href="#enumeration">
+                Enumeration of self-avoiding walks and related objects</a>,
+            <a href="#endless">
+                Endless walk models</a>,
+            <a href="#climate">
+                Multi-gas modelling for climate change</a>,
+            <a href="#polymer">
+                Polymer physics</a>,
+            <a href="#visualisation">
+                Mathematical visualisation</a>,
+            <a href="#gpu">
+                Backtracking algorithms implemented on GPUs
+            </a>.
+            <div style="display:block;height:50em;"></div>
+            <h2 id="mcmc">Efficient algorithms for Markov chain Monte Carlo
+                simulation
+            </h2>
+            <h2 id="virial">
+                Virial series for hard spheres and related models
+            </h2>
+            <h2 id="enumeration">
+                Enumeration of self-avoiding walks and related objects
+            </h2>
+            <h2 id="endless">
+                Endless walk models
+            </h2>
+            <h2 id="climate">
+                Multi-gas modelling for better policy decisions
+                regarding climate change
+            </h2>
+            <h2 id="polymer">
+                Polymer physics
+            </h2>
+            <h2 id="visualisation">
+                Mathematical visualisation
+            </h2>
+            <h2 id="gpu">
+                Backtracking algorithms implemented on GPUs
+            </h2>
+            <h2>
+            </h2>
+            <h2>
+            </h2>
             </p>
+            <p>
+
+            </p>
+            <p>
+            </p>
+            <p>
+            </p>
+            <p>
+            </p>
+            <div style="display:block;height:50em;"></div>
         </div> <!-- content -->
     </div> <!-- contentblock -->
     <div id="push"></div>
