Tidied up empty research section.

--- a/research/topics/index.html
+++ b/research/topics/index.html
@@ -63,8 +63,9 @@
                 </div>
                 </h1>
             <p>
-            30/12/14: Empty for now, I will be progressively adding
-            material here over the next few weeks.
+            12/1/14: Empty for now, I will be progressively adding
+            material here over the next few weeks under the following
+            topics:
             <a href="#mcmc">
                 Efficient algorithms for Markov chain Monte
                 Carlo simulaton</a>,
@@ -83,7 +84,7 @@
             <a href="#gpu">
                 Backtracking algorithms implemented on GPUs
             </a>.
-            <div style="display:block;height:50em;"></div>
+            <!--
             <h2 id="mcmc">Efficient algorithms for Markov chain Monte Carlo
                 simulation
             </h2>
@@ -109,21 +110,7 @@
             <h2 id="gpu">
                 Backtracking algorithms implemented on GPUs
             </h2>
-            <h2>
-            </h2>
-            <h2>
-            </h2>
-            </p>
-            <p>
-
-            </p>
-            <p>
-            </p>
-            <p>
-            </p>
-            <p>
-            </p>
-            <div style="display:block;height:50em;"></div>
+            -->
         </div> <!-- content -->
     </div> <!-- contentblock -->
     <div id="push"></div>
