Fixed title on contact page.

--- a/contact/index.html
+++ b/contact/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Nathan Clisby's homepage</title>
+    <title>contact</title>
     <link rel="canonical" href="/contact/" />
     <link rel="stylesheet" type="text/css" href="/css/nc.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
