Highlighted backtracker app in bold.

--- a/projects/backtracker/index.html
+++ b/projects/backtracker/index.html
@@ -89,9 +89,10 @@
             their own heuristics (intuition).
             </p>
             <p>
-            A prototype version can be played <a href="app/"
-                target="_blank">here</a>
-            for now (opens in a new window). It will likely move to a different url in future.
+            <b>A prototype version can be played <a href="app/"
+                    target="_blank">here</a>.</b>
+            (The app will open in a new window.) N.B., in future the app will
+            very likely move to a different url.
             </p>
             <p>
             This prototype works for the 
