Unable to sync, dont know why.

--- a/projects/backtracker/index.html
+++ b/projects/backtracker/index.html
@@ -89,8 +89,7 @@
             their own heuristics (intuition).
             </p>
             <p>
-            <b>A prototype version can be played <a href="app/"
-                    target="_blank">here</a>.</b>
+            <b>A prototype version can be played <a href="app/" target="_blank">here</a>.</b>
             (The app will open in a new window.) N.B., in future the app will
             very likely move to a different url.
             </p>
