Fixed broken link.

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <p>
             Here you will find some details about my <a href="/research/">research</a> (including
                 lists of possible research <a href="/research/topics/">topics</a> for students and collaborators, and my <a href="/research/publications/">publications</a>),
-                and various <a href="/project/">project</a> pages where you can find interactive applications, visualisations, 
+                and various <a href="/projects/">project</a> pages where you can find interactive applications, visualisations, 
                 and in future software for download. 
                 </p>
                 <p>
