--- a/index.html
+++ b/index.html
@@ -78,8 +78,9 @@
                 <a href="http://www.ms.unimelb.edu.au/">School of Mathematics and Statistics</a> at the 
                 <a href="http://www.unimelb.edu.au/">University of
                     Melbourne</a>, supported by an ARC Future Fellowship.
-                I'm also an associate investigator of <a
-                    href="http://www.complex.org.au/">MASCOS</a>.
+                I'm also an associate investigator of 
+                <a href="http://www.complex.org.au/">MASCOS</a>
+                and <a href="http://acems.org.au/">ACEMS</a>.
                 </p>
                 <p>
             Here you will find some details about my <a href="/research/">research</a> (including
