--- a/projects/hamiltonian_path/hamiltonian_path_v1.html
+++ b/projects/hamiltonian_path/hamiltonian_path_v1.html
@@ -399,7 +399,8 @@ Circuits only: <input type="checkbox" name="is_circuit" id="is_circuit" value="i
 </form><br/>
 </center>
 <center>
-<canvas id="path_canvas" width="600" height="600"><p>Canvas element not
+<!--<canvas id="path_canvas" width="600" height="600"><p>Canvas element not-->
+<canvas id="path_canvas" width="2000" height="2000"><p>Canvas element not
 supported in your browser.</p></canvas><br/>
 <textarea id="path_text" rows="40" cols="80" style="font-size:75%"></textarea><br/>
 <div style="text-align:left;width:800px">
