Added scbridges reference and fixed Garnaut reference to have full names.

--- a/research/publications/index.html
+++ b/research/publications/index.html
@@ -74,6 +74,15 @@
                 <h3> Articles, book chapters, and other publications </h3>
                 <table>
                     <tr><td>
+                            Nathan Clisby, Andrew R. Conway, and Anthony
+                            J. Guttmann,
+                            Three-dimensional terminally attached
+                            self-avoiding walks and bridges,
+                            <a
+                                href="http://arxiv.org/abs/1504.02085">arXiv:1504.02085</a>
+                            (2015).
+                    </td></tr>
+                    <tr><td>
                             Nathan Clisby, Endless self-avoiding walks,
                             <a href="http://arxiv.org/abs/1302.2796">arXiv:1302.2796</a>,
                             <a href="http://dx.doi.org/10.1088/1751-8113/46/23/235001">J. Phys.
@@ -137,8 +146,9 @@
                                 <em>Polygons, Polyominoes and Polycubes,</em> Lecture
                                 notes in Physics Vol. 775, Ed. A.&#160;J.&#160;Guttmann
                                 (Springer, 2009) pp. 117&ndash;142.</tr></td> 
-                        <tr><td>Ian G. Enting, D.&#160;Karoly, J.&#160;Falk,
-                                Nathan Clisby, R.&#160;Bodman, and D.&#160;Settle
+                        <tr><td>Ian G. Enting, David Karoly, Jim Falk,
+                                Nathan Clisby, Roger Bodman, and
+                                Domenica Settle
                                 (CASPI), The Science of Stabilising Greenhouse Gas
                                 Concentrations, a commissioned report for the Garnaut
                                 Climate Change Review, available at <a
