Odd space after bold tag in publications has been patched with an ad-hoc fix.

--- a/research/publications/index.html
+++ b/research/publications/index.html
@@ -86,7 +86,7 @@
                             Nathan Clisby, Endless self-avoiding walks,
                             <a href="http://arxiv.org/abs/1302.2796">arXiv:1302.2796</a>,
                             <a href="http://dx.doi.org/10.1088/1751-8113/46/23/235001">J. Phys.
-                                A.: Math. Theor.</a> <b>46</b>:235001 (2013).
+                                A.: Math. Theor.</a> <b>46</b> 235001 (2013).
                     </td></tr>
                     <tr><td>
                             Nathan Clisby, Calculation of the connective constant for
@@ -94,7 +94,7 @@
                             <a
                                 href="http://arxiv.org/abs/1302.2106">arXiv:1302.2106</a>, 
                             <a href="http://dx.doi.org/10.1088/1751-8113/46/24/245001">J. Phys.
-                                A.: Math. Theor.</a> <b>46</b>:245001 (2013). 
+                                A.: Math. Theor.</a> <b>46</b> 245001 (2013). 
                             Chosen for <a href="http://select.iop.org/">IOP Select</a>, and highlighted in
                             <a
                                 href="http://www.europhysicsnews.org/component/content/article?id=439">Europhysics
@@ -107,25 +107,25 @@
                             alternative to emission equivalence metrics, 
                             <a href="http://dx.doi.org/10.1016/j.ijggc.2012.11.028">
                                 International Journal of Greenhouse Gas Control</a>
-                            <b>12</b>:419&ndash;429 (2013).
+                            <b>12</b> 419&ndash;429 (2013).
                     </td></tr>
                     <tr><td>
                             Nathan Clisby and Iwan Jensen, A new transfer-matrix algorithm for
                             exact enumerations: self-avoiding polygons on the square lattice,
                             <a href="http://dx.doi.org/10.1088/1751-8113/45/11/115202">J. Phys.
-                                A.: Math. Theor.</a> <b>45</b>:115202 (2012).
+                                A.: Math. Theor.</a> <b>45</b> 115202 (2012).
                     </td></tr>
                     <tr><td>
                             Ian G. Enting and Nathan Clisby, Series Analysis of a
                             Kosterlitz-Thouless Transition: The 6-State Planar Potts Model,
                             <a href="http://dx.doi.org/10.1007/s10955-011-0322-8">J. Stat.
-                                Phys.</a> <b>145</b>:696--712 (2011).
+                                Phys.</a> <b>145</b> 696--712 (2011).
                     </td></tr>
                     <tr><td>Nathan Clisby, Efficient implementation of the pivot
                             algorithm for self&ndash;avoiding walks, <a
                                 href="http://www.arxiv.org/abs/1005.1444">arXiv:1005.1444</a>,
                             <a href="http://dx.doi.org/10.1007/s10955-010-9994-8">J.
-                                Stat. Phys.</a> <b>140</b>:349&ndash;392
+                                Stat. Phys.</a> <b>140</b> 349&ndash;392
                             (2010).</td></tr>
                     <tr><td>Nathan Clisby, Accurate estimate of the critical exponent
                             &nu; for self&ndash;avoiding walks via a fast
@@ -160,21 +160,21 @@
                                         hyperspheres in nine dimensions for low to
                                         moderate densities, <a
                                             href="http://dx.doi.org/10.1063/1.2821962"> J.
-                                            Chem. Phys.</a> <b>128</b>:034506
+                                            Chem. Phys.</a> <b>128</b> 034506
                                         (2008).</td></tr>
                                 <tr><td> Nathan Clisby, Richard Liang, and Gordon Slade,
                                         Self&ndash;avoiding walk enumeration via the lace
                                         expansion, <a
                                             href="http://dx.doi.org/10.1088/1751-8113/40/36/003">
                                             J. Phys. A: Math. Theor.</a>
-                                        <b>40</b>:10973&ndash;11017 (2007). </td></tr>
+                                        <b>40</b> 10973&ndash;11017 (2007). </td></tr>
                                 <tr><td>Nathan Clisby and Barry M. McCoy, Ninth
                                         and Tenth Order Virial Coefficients for Hard
                                         Spheres in  <em>D</em> Dimensions, <a
                                             href="http://www.arxiv.org/abs/cond-mat/0503525">cond&ndash;mat/0503525</a>,
                                         <a
                                             href="http://dx.doi.org/10.1007/s10955-005-8080-0">J.
-                                            Stat. Phys.</a> <b>122</b>:15&ndash;57 (2006).
+                                            Stat. Phys.</a> <b>122</b> 15&ndash;57 (2006).
                                 </td></tr>
                                 <tr><td>Nathan Clisby and Barry M. McCoy, New
                                         results for virial coefficients of hard spheres in
@@ -182,7 +182,7 @@
                                             href="http://www.arxiv.org/abs/cond-mat/0410511">cond&ndash;mat/0410511</a>,
                                         in proceedings of STATPHYS 22, <a
                                             href="http://www.ias.ac.in/pramana/v64/v64no5.htm">Pramana
-                                            &#151; J. Phys.</a> <b>64</b>:775&ndash;783
+                                            &#151; J. Phys.</a> <b>64</b> 775&ndash;783
                                         (2005).</td></tr>
                                 <tr><td>Nathan Clisby, Negative Virial Coefficients for
                                         Hard Spheres, <a
@@ -196,7 +196,7 @@
                                             href="http://www.arxiv.org/abs/cond-mat/0303098">cond&ndash;mat/0303098</a>,
                                         <a
                                             href="http://dx.doi.org/10.1023/B:JOSS.0000013959.30878.d2">J.
-                                            Stat. Phys.</a> <b>114</b>:1343&ndash;1361
+                                            Stat. Phys.</a> <b>114</b> 1343&ndash;1361
                                         (2004).</td></tr>
                                 <tr><td>Nathan Clisby and Barry M. McCoy,
                                         Negative virial coefficients and the dominance
@@ -205,7 +205,7 @@
                                             href="http://www.arxiv.org/abs/cond-mat/0303100">cond&ndash;mat/0303100</a>,
                                         <a
                                             href="http://dx.doi.org/10.1023/B:JOSS.0000013960.83555.7d">J.
-                                            Stat. Phys.</a> <b>114</b>:1361&ndash;1392
+                                            Stat. Phys.</a> <b>114</b> 1361&ndash;1392
                                         (2004).</td></tr>
                                 <tr><td>Shane A. Canney, Maarten Vos,
                                         Anatoli S. Kheifets, Nathan Clisby,
@@ -214,7 +214,7 @@
                                         valence band of aluminium, <a
                                             href="http://dx.doi.org/10.1088/0953-8984/9/9/008">J.
                                             Phys.: Condens. Matter</a>,
-                                        <b>9</b>:1931&ndash;1950 (1997).</td></tr>
+                                        <b>9</b> 1931&ndash;1950 (1997).</td></tr>
                             </table>
                             <h3>Other documents</h3>
                             <table>
