One ref formatting error fixed.

--- a/research/publications/index.html
+++ b/research/publications/index.html
@@ -133,7 +133,7 @@
                                 href="http://www.arxiv.org/abs/1002.0494">arXiv:1002.0494</a>,
                             <a
                                 href="http://dx.doi.org/10.1103/PhysRevLett.104.055702">Phys.
-                                Rev. Lett.</a> <b>104</b>, 055702 (2010). 
+                                Rev. Lett.</a> <b>104</b> 055702 (2010). 
                         </tr>
                         <tr><td>Ian G. Enting and Nathan Clisby, Submission to the
                                 Senate Select Committee on Climate Policy, no. 360 at <a
