One ref formatting error fixed.

--- a/research/publications/index.html
+++ b/research/publications/index.html
@@ -119,7 +119,7 @@
                             Ian G. Enting and Nathan Clisby, Series Analysis of a
                             Kosterlitz-Thouless Transition: The 6-State Planar Potts Model,
                             <a href="http://dx.doi.org/10.1007/s10955-011-0322-8">J. Stat.
-                                Phys.</a> <b>145</b> 696--712 (2011).
+                                Phys.</a> <b>145</b> 696&ndash;712 (2011).
                     </td></tr>
                     <tr><td>Nathan Clisby, Efficient implementation of the pivot
                             algorithm for self&ndash;avoiding walks, <a
