--- a/maia/index.html
+++ b/maia/index.html
@@ -7,53 +7,19 @@
     Piedad."> 
     <link rel="stylesheet" type="text/css" href="css/maia.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--<link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">-->
-    <!--<link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">-->
-    <!--<link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">-->
-    <!--<link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png">-->
-    <!--<link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">-->
-    <!--<link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png">-->
-    <!--<link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png">-->
-    <!--<link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">-->
-    <!--<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png">-->
-    <!--<link rel="icon" type="image/png" href="/favicon-192x192.png" sizes="192x192">-->
-    <!--<link rel="icon" type="image/png" href="/favicon-160x160.png" sizes="160x160">-->
-    <!--<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">-->
-    <!--<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">-->
-    <!--<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">-->
-    <!--<meta name="msapplication-TileColor" content="#603cba">-->
-    <!--<meta name="msapplication-TileImage" content="/mstile-144x144.png">-->
+    <meta name="google-translate-customization"
+    content="21fb90c94794b0bf-f2545fc3a9b1ab65-g2a50f854e7d93cf3-10"></meta>
 </head>
 
 <body>
     <div id="topwrapper">
         <div id="topbar">
-            <!--Can assume that tnav elements 2x width of bnav-->
-            <!--<div class="tnav">-->
-                <!--<ul>-->
-                    <!--<li><a class="current" href="/">home</a></li>-->
-                    <!--<li><a href="/research/">research</a></li>-->
-                    <!--<li><a href="/projects/">projects</a></li>-->
-                <!--</ul>-->
-            <!--</div> [> tnav <]-->
-            <!--<div class="bnav w3">-->
-                <!--<ul>-->
-                    <!--<li><a class="current" href="/">(main)</a></li>-->
-                    <!--<li><a href="/contact/">(contact)</a></li>-->
-                    <!--<li><a href="/links/">(links)</a></li>-->
-                <!--</ul>-->
-            <!--</div> [> bnav <]-->
         </div> <!-- topbar -->
 
         <div id="contentblock">
             <div id="content">
                 <h1 style="display:inline-block;line-height:1.0em;margin-bottom:-0.3em;">
-                <!--<div style="display:block;float:left;margin-right:1.5em;vertical-align:top;">-->
-                    <!--<a href="/" > <img src="/img/nc_full_logo.png"></img></a>-->
-                <!--</div>-->
-                <!--<div style="display:block;float:left;clear:right;vertical-align:top;">-->
                     Maia Clisby de la Piedad's homepage
-                <!--</div>-->
                 </h1>
                 <p>
                 <div class="image">
@@ -75,23 +41,12 @@
                 <p>
             Read Treacherous Tower <a href="treacherous_tower">here</a>.
                 </p>
-                <!--<h3>Updates</h3>-->
-                <!--[><table width="100%" style="table-layout:fixed;"><]-->
-                <!--<table>-->
-                    <!--<tr>-->
-                        <!--<td>30/12/2014</td><td>This homepage-->
-                            <!--created.</td>-->
-                    <!--</tr>-->
-                <!--</table>-->
             </div> <!-- content -->
         </div> <!-- contentblock -->
         <div id="push"></div>
     </div> <!-- topwrapper -->
     <div id="bottombar">
         <div id="footer">
-            <!--<div id="footquote">-->
-                <!--<script src="/includesnippet.js"></script>-->
-            <!--</div>-->
         </div> <!-- footer -->
     </div> <!-- bottombar -->
 </body>
