Fixed quotation marks and apostrophes.

--- a/maia/index.html
+++ b/maia/index.html
@@ -34,9 +34,9 @@
                 <p>
                 I am Maia and I am nine years old. I go to BSPS (<a
                     href="http://brunswicksouthps.vic.edu.au/">Brunswick South Primary School</a>) and I am in third grade. I
-        have no brothers or sisters and i'm not sure i want them!!! I live in Melbourne, Australia. I like reading and writing.
-            I have written a &ldquo;choose your own adventure&rdquo; book. In mine, you don't choose your adventure, you pick a path;
-          sometimes you get stuck, sometimes you don't. Every time you will get back on track. I'll let you see it now ....
+        have no brothers or sisters and I&prime;m not sure I want them!!! I live in Melbourne, Australia. I like reading and writing.
+            I have written a &ldquo;choose your own adventure&rdquo; book. In mine, you don&prime;t choose your adventure, you pick a path;
+          sometimes you get stuck, sometimes you don&prime;t. Every time you will get back on track. I&prime;ll let you see it now ....
                 </p>
                 <p>
             Read Treacherous Tower <a href="treacherous_tower">here</a>.
