Added one more link to index.html for Treacherous Tower.

--- a/maia/treacherous_tower/index.html
+++ b/maia/treacherous_tower/index.html
@@ -10,12 +10,15 @@
 <div id="content">
 <p>
 Welcome to Treacherous Tower. Read on if you DARE!
+</p>
 
 <br/>
 <div class="choice">
     Turn to <a href="page001.html">page 1</a>.
 </div> <!-- choice -->
 
+<br/><br/>
+Click <a href="../">here</a> to return to Maia's homepage.
 </div> <!-- content -->
 </body>
 </html>
