--- a/maia/index.html
+++ b/maia/index.html
@@ -32,7 +32,7 @@
             Welcome to my homepage! 
                 </p>
                 <p>
-                I am Maia and I am nine years old. I go to BSPS (<a
+                I am Maia and I am almost nine years old. I go to BSPS (<a
                     href="http://brunswicksouthps.vic.edu.au/">Brunswick South Primary School</a>) and I am in third grade. I
         have no brothers or sisters and I&prime;m not sure I want them!!! I live in Melbourne, Australia. I like reading and writing.
             I have written a &ldquo;choose your own adventure&rdquo; book. In mine, you don&prime;t choose your adventure, you pick a path;
