--- a/entingfest/index.html
+++ b/entingfest/index.html
@@ -47,7 +47,9 @@ Enting fest, 2015
                 10px">
             </div>
 
-            On March 17, 2015, at CSIRO Oceans and Atmosphere Flagship,
+            On March 17, 2015, at <a
+                href="http://www.csiro.au/en/Research/OandA">CSIRO
+                Oceans and Atmosphere Flagship</a>,
             Aspendale, Victoria, we celebrated the career of Ian
             Enting by holding a unique conference
             in his honour.
