Added Cathy Trudingers link.

--- a/entingfest/index.html
+++ b/entingfest/index.html
@@ -116,7 +116,8 @@ Enting fest, 2015
                         </td><td>
                         Cathy Trudinger
                         </td><td>
-                        History of composition
+                        <a href="talks/trudinger_entingfest.pdf">Past
+                            atmospheric composition</a>
                 </td></tr>
                 <tr><td>
                         11:45
