--- a/entingfest/index.html
+++ b/entingfest/index.html
@@ -165,7 +165,15 @@ Enting fest, 2015
                         Problems I've not solved yet
                 </td></tr>
             </table>
-
+            <br/>
+            <p>
+            To find out more about Ian's illustrious and varied career,
+            please visit his <a
+                href="http://www.ms.unimelb.edu.au/~enting/">homepage</a> and <a
+                href="http://en.wikipedia.org/wiki/Ian_G._Enting">Wikipedia
+                entry</a>.
+            </p>
+            <br/>
             <p>
             This webpage is still under development; more photos and talks will be added
             in future.
