--- a/entingfest/index.html
+++ b/entingfest/index.html
@@ -169,9 +169,14 @@ Enting fest, 2015
             <p>
             To find out more about Ian's illustrious and varied career,
             please visit his <a
-                href="http://www.ms.unimelb.edu.au/~enting/">homepage</a> and <a
-                href="http://en.wikipedia.org/wiki/Ian_G._Enting">Wikipedia
-                entry</a>.
+                href="http://www.ms.unimelb.edu.au/~enting/">homepage</a>,
+            or have a look at
+            <a
+                href="http://en.wikipedia.org/wiki/Ian_G._Enting">
+                Wikipedia</a>, or search for his papers on
+            <a
+                href="https://scholar.google.com.au/scholar?hl=en&q=ian+enting">Google
+                Scholar</a>.
             </p>
             <br/>
             <p>
