--- a/entingfest/index.html
+++ b/entingfest/index.html
@@ -175,7 +175,7 @@ Enting fest, 2015
                 href="http://en.wikipedia.org/wiki/Ian_G._Enting">
                 Wikipedia</a>, or search for his papers on
             <a
-                href="https://scholar.google.com.au/scholar?hl=en&q=ian+enting">Google
+                href="https://scholar.google.com.au/scholar?as_q=&as_sauthors=ig+enting">Google
                 Scholar</a>.
             </p>
             <br/>
