--- a/entingfest/index.html
+++ b/entingfest/index.html
@@ -175,7 +175,7 @@ Enting fest, 2015
                 href="http://en.wikipedia.org/wiki/Ian_G._Enting">
                 Wikipedia</a>, or search for his papers on
             <a
-                href="https://scholar.google.com.au/scholar?as_q=&as_sauthors=ig+enting">Google
+                href="https://scholar.google.com/scholar?q=%28author%3Aian+OR+author%3Aig%29+AND+author%3Aenting&btnG=&hl=en&as_sdt=0%2C5">Google
                 Scholar</a>.
             </p>
             <br/>
