added photos, updated text for enting fest

--- a/entingfest/index.html
+++ b/entingfest/index.html
@@ -42,9 +42,9 @@ Enting fest, 2015
                 </h2>
                 <p>
                 <div class="image">
-                <img src="images/ian_portrait.jpg" alt="Ian" width="25%"
+                <img src="images/ian_portrait.jpg" alt="Ian" width="27%"
                 style="float:right;min-width:100px;margin: 10px 0px 0px
-                10px">
+                10px" />
             </div>
 
             On March 17, 2015, at <a
@@ -68,8 +68,11 @@ Enting fest, 2015
             Speakers at the symposium were Ian himself, Peter Rayner (the
             symposium organiser), Paul Krummel, David Etheridge, Roger Francey, 
             Tony Guttmann,
-            Cathy Trudinger, Nathan Clisby, Rachel Law, and Graeme Pearman.
+            Cathy Trudinger, Nathan Clisby, Rachel Law, and Graeme
+            Pearman. There were numerous other attendees, including
+            Gary Newsam who made the trip from Adelaide.
             </p>
+
             <p>
             The symposium schedule was:
             </p>
@@ -178,10 +181,44 @@ Enting fest, 2015
                 href="https://scholar.google.com/scholar?q=%28author%3Aian+OR+author%3Aig%29+AND+author%3Aenting&btnG=&hl=en&as_sdt=0%2C5">Google
                 Scholar</a>.
             </p>
+<table>
+    <tr><td>
+                <img src="images/twisted_in_antarctica.png" alt="Twisted in
+                Antarctica" style="width:100%" />
+        </td><td>
+                <img src="images/transcom2001.png" alt="TransCom 2001"
+                style="width:100%" />
+</td></tr>
+<tr><td>
+Ian&prime;s book &ldquo;Twisted&rdquo; at 2700m in Aurora Basin camp,
+Antarctica, 2013.
+        </td><td>
+        Bushwalk near Melbourne during TransCom 2001.
+</td></tr>
+    <tr><td>
+                <img src="images/ipcc.png" alt="IPCC report"
+                style="width:100%" />
+        </td><td>
+                <img src="images/ian_before.png" alt="Ian before"
+                style="width:42%" />
+                <img src="images/ian_after.png" alt="Ian after"
+                style="width:42%" />
+</td></tr>
+<tr><td>
+        Cover from IPCC report Climate Change 1994, of which Ian was a
+        lead author.
+        </td><td>
+Photos of Ian from CSIRO reports: left in 1995, after recently being
+appointed Program leader of &ldquo;B2: Greenhouse Gases&rdquo;, and
+right in 1996,
+after a year in the job!
+</td></tr>
+</table>
             <br/>
-            <p>
-            This webpage is still under development; more photos and talks will be added
-            in future.
+            <p style="font-size:0.8em">
+            This webpage is still under development. If you have any
+            comments or (especially) photos please contact <a
+                href="mailto:clisby@gmail.com">Nathan Clisby (clisby@gmail.com)</a>.
             </p>
             </div> <!-- content -->
         </div> <!-- contentblock -->
