--- a/entingfest/index.html
+++ b/entingfest/index.html
@@ -208,7 +208,7 @@ Antarctica, 2013.
         Cover from IPCC report Climate Change 1994, of which Ian was a
         lead author.
         </td><td>
-Photos of Ian from CSIRO reports: left in 1995, after recently being
+Photos of Ian from CRCSHM reports: left in 1995, after recently being
 appointed Program leader of &ldquo;B2: Greenhouse Gases&rdquo;, and
 right in 1996,
 after a year in the job!
