minor edit enting fest, added ians talk

--- a/entingfest/index.html
+++ b/entingfest/index.html
@@ -165,7 +165,9 @@ Enting fest, 2015
                         </td><td>
                         Ian Enting
                         </td><td>
-                        Problems I've not solved yet
+                        <a href="talks/enting_entingfest.pdf">
+                            Are we there yet? Some problems I never
+                            managed to solve</a>
                 </td></tr>
             </table>
             <br/>
